# api/openapi/users.yml
@@ -1458,15 +1458,6 @@ components:
       required: true
       example: bb7edb32-2eac-4aad-aebe-ed96fe073879
 
-    Visibility:
-      name: visibility
-      description: The visibility specifier when listing users. Either all, shared or mine.
-      in: path
-      schema:
-        type: string
-      required: true
-      example: all
-
     UserName:
       name: name
       description: User's name.
